# data_generation

./: .env.example  .gitignore  CLAUDE.md  DEVELOPER.md  EFFICIENCY_REPORT.md  LICENSE  MESSY_DATA_IMPLEMENTATION_PLAN.md  README.md  SIMPLIFIED_DESIGN.md  TARGET_VARIABLE_GENERATION_DESIGN.md  WEB_README.md  agent.py  config.py  main.py  pyproject.toml
examples/: related_tables.md
scripts/: validate.sh
src/data_generation/: __init__.py  api.py  cli.py
src/data_generation/core/: agent.py  generator.py  output_formats.py  quality.py  target_generation.py
src/data_generation/tools/: data_generation.py  schema_inference.py  schema_validation.py
src/data_generation/web/: __init__.py  app.py
src/makeitup/: __init__.py  api.py  config.py
src/makeitup/core/: generator.py
tests/: test_api.py  test_generator.py  test_output_formats.py  test_quality_validation.py  test_schema_validation.py
tools/: __init__.py  generator.py  schema_inference.py  schema_validation.py
